--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
           </div> -->
 
           <button id="login" type="submit">Login</button>
-          <p>copyright &copy; 2024</p>
+          <p id="copy">copyright &copy; 2024</p>
         </form>
       </div>
     </main>
